Bug 296666 - Color of text changes on save/load
Summary: Color of text changes on save/load
Status: RESOLVED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: text-layout (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR critical
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-24 05:50 UTC by T Zachmann
Modified: 2012-03-25 04:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Document showing the problem (224.41 KB, application/vnd.oasis.opendocument.presentation)
2012-03-24 06:05 UTC, T Zachmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description T Zachmann 2012-03-24 05:50:55 UTC
User-Agent:       Mozilla/5.0 (compatible; Konqueror/4.6; Linux) KHTML/4.6.5 (like Gecko) Kubuntu
Build Identifier: 

When load, save and load of the attached presentation the text color changes to white.

Reproducible: Always
Comment 1 T Zachmann 2012-03-24 06:05:53 UTC
Created attachment 69844 [details]
Document showing the problem
Comment 2 T Zachmann 2012-03-24 06:12:17 UTC
Git commit 10128edd6776b25e493ccd919792b6877cdca52d by Thorsten Zachmann.
Committed on 24/03/2012 at 06:51.
Pushed by zachmann into branch 'master'.

Correctly roundtrip use-window-color.

Before the patch when saving the document attached to bug 296666 additionally to the use-window-color also
a fo:color was saved. However this attributes needs to be stripped when a inherited style sets the use-window-color

Please review so I can backport to 2.4 branch.

Roundtrip tested with my odp and odt test set.

CCMAIL: calligra-devel@kde.org

M  +4    -0    libs/kotext/styles/KoCharacterStyle.cpp

http://commits.kde.org/calligra/10128edd6776b25e493ccd919792b6877cdca52d
Comment 3 T Zachmann 2012-03-24 06:12:19 UTC
Git commit 10128edd6776b25e493ccd919792b6877cdca52d by Thorsten Zachmann.
Committed on 24/03/2012 at 06:51.
Pushed by zachmann into branch 'master'.

Correctly roundtrip use-window-color.

Before the patch when saving the document attached to bug 296666 additionally to the use-window-color also
a fo:color was saved. However this attributes needs to be stripped when a inherited style sets the use-window-color

Please review so I can backport to 2.4 branch.

Roundtrip tested with my odp and odt test set.

CCMAIL: calligra-devel@kde.org

M  +4    -0    libs/kotext/styles/KoCharacterStyle.cpp

http://commits.kde.org/calligra/10128edd6776b25e493ccd919792b6877cdca52d
Comment 4 T Zachmann 2012-03-25 04:39:34 UTC
Git commit fb72a3a2db5157569688d55fbb8db43f9e6538f7 by Thorsten Zachmann.
Committed on 24/03/2012 at 06:51.
Pushed by zachmann into branch 'calligra/2.4'.

Correctly roundtrip use-window-color.

Before the patch when saving the document attached to bug 296666 additionally to the use-window-color also
a fo:color was saved. However this attributes needs to be stripped when a inherited style sets the use-window-color

Please review so I can backport to 2.4 branch.

Roundtrip tested with my odp and odt test set.

CCMAIL: calligra-devel@kde.org
Reviewd by: boemann
(cherry picked from commit 10128edd6776b25e493ccd919792b6877cdca52d)

M  +4    -0    libs/kotext/styles/KoCharacterStyle.cpp

http://commits.kde.org/calligra/fb72a3a2db5157569688d55fbb8db43f9e6538f7