Correctly roundtrip use-window-color.

Before the patch when saving the document attached to bug 296666 additionally to the use-window-color also
a fo:color was saved. However this attributes needs to be stripped when a inherited style sets the use-window-color

BUG: 296666

Please review so I can backport to 2.4 branch.

Roundtrip tested with my odp and odt test set.

CCMAIL: calligra-devel@kde.org